--- a/Udder/Base.lproj/Main.storyboard
+++ b/Udder/Base.lproj/Main.storyboard
@@ -46,6 +46,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="getMilk" destination="wRw-CN-7hK" id="fi0-gC-cJ5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
